crates/raster/tests/ui/recur_sequence_rejects_recur_control.stderr
error: custom attribute panicked
 --> tests/ui/recur_sequence_rejects_recur_control.rs:9:1
  |
9 | #[sequence(kind = recur)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `#[sequence(kind = recur)]` cannot return `RecurControl`; early termination must be decided inside recur tiles
